fix remaining tests

--- a/demo/index.html
+++ b/demo/index.html
@@ -219,6 +219,7 @@
         for (var i = 0, len = data.length; i < len; i++) {
             data[i].a = data[i].a + ' - bad guys';
         }
+        return data;
     },
     callback: function(data, pagination) {
         // template method of yourself
