--- a/demo/index.html
+++ b/demo/index.html
@@ -13,12 +13,12 @@
     <div class="title">PaginationTs<span>1.0.0</span></div>
     <div class="desc">
         TypeScript rewrite of pagination.js without JQuery dependency.<br>
-        Almost all the ways you can think of on pagination.
+        MIT licensed on <a href="https://github.com/lofcz/paginationts" target="_blank">GitHub</a> ⭐
     </div>
     <div class="download">
         <div class="build-buttons">
-            <a class="build-button-source" href="dist/2.6.0/pagination.js">pagination.js</a>
-            <a class="build-button-zipped" href="dist/2.6.0/pagination.min.js">pagination.min.js <span class="fileSize">15.0K</span></a>
+            <a class="build-button-source" href="https://github.com/lofcz/paginationts/releases/download/1.0.0/paginationts.js">pagination.js</a>
+            <a class="build-button-zipped" href="https://github.com/lofcz/paginationts/releases/download/1.0.0/paginationts.js">pagination.min.js <span class="fileSize">17.0K</span></a>
         </div>
     </div>
 </div>
